# ekorpkit-book

./: .buildinfo  .dockerignore  .env  .env.example  .env.vault  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CNAME  Dockerfile  Makefile  README.md  genindex.html  intro.html  markdown-notebooks.html  markdown.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.devcontainer/: devcontainer.json
.github/workflows/: deploy-docs.yaml  prerelease.yaml  release.yaml
_sources/: intro.md  markdown-notebooks.ipynb
_static/: ekorpkit.css
assets/data/: prompt_parrot.txt
config/corpus/: econ_news_kr_code.yaml  esg_nouns.yaml  esg_report_nouns.yaml  esg_topics2_norm.yaml  esg_topics2_nouns.yaml  sample_report_nouns.yaml  sec_report_filtered.yaml  sec_report_nouns.yaml
config/dataset/: finsent_kr.yaml
config/project/: colab.yaml  esgml.yaml
data/: fomc_features.parquet
docs/about/: about.html  cite.html  index.html  install.html  usage.html
docs/basics/: index.html  install.html  usage.html
docs/corpus/: README.html  ekorpkot-corpus.html  ekorpkot_corpus.html
docs/references/: cite.html  index.html  license.html  references.html
ekorpkit-book/: _config.yml  _toc.yml  intro.md  references.bib  requirements.txt
ekorpkit-book/_static/: ekorpkit.css
extra/: lda_basic.html
html/: lda_basic.html
resources/: bio.yaml  company_names.txt
scripts/: add-git-safe-directory.sh  book-build.sh  book-publish.sh  env.sh  install-ekorpkit.sh  jupyter-ext.sh  publish-book.sh  start-notebook.sh  start-rubrix.sh  symlink-hf-cache.sh
(+711 files in other folders)
